# Intelligent-Teams-Planner

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  FINAL-PROJECT-COMPLETION-REPORT.md  INTELLIGENT-STARTUP-GUIDE.md  LOGICAL-PROGRESSION-ANALYSIS.md  MICROSERVICES-DOCKERIZATION-BLUEPRINT.md  MIGRATION_REPORT.md  PORT-CONFIGURATION.md  README.md  UV_QUICK_START.md  debug_regex.py  deploy.bat  docker-compose.caddy.yml  docker-compose.complete.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.simple.yml  docker-compose.uv.yml  docker-compose.yml  setup-windows.ps1  start-intelligent-teams-planner.bat  start-intelligent-teams-planner.sh  test_bucket_creation.py  test_integration.py  test_production_validation.py  test_query.py  test_real_integration.py  test_semantic_integration.py  validate_claude.py  verify_migration.py
planner-mcp-server/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.simple  Dockerfile.uv  EPIC_03_QA_ASSESSMENT.md  FULL_FUNCTIONALITY_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  QA_STATUS_REPORT.md  README.md  TASK_FIELD_ANALYSIS.md  create_test_task.py  mvp_test_cli.py  oauth_callback_server.py  performance_validation.py  pyproject.toml  requirements-simple.txt  requirements.txt  setup-uv.sh  test_checklist_comments.py  test_nlp_implementation.py
planner-mcp-server/src/: __init__.py  auth.py  cache.py  database.py  graph_client.py  main.py  required_fields.py  session_auth.py  teams_planner_client.py  tools.py
planner-mcp-server/tests/: test_batch_operations.py  test_delta_queries.py  test_error_classification.py  test_multi_tenant.py  test_mvp_teams_planner.py  test_nlp_components.py  test_nlp_integration.py  test_performance_optimization.py  test_permissions.py  test_rate_limiting.py  (+2 more)
(+374 files in other folders)
