[tool.poetry]
name = "planner-mcp-server"
version = "2.0.0"
description = "Microsoft Graph API MCP Server for Intelligent Teams Planner"
authors = ["Intelligent Teams Planner Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.0"
msal = "^1.26.0"
httpx = {extras = ["http2"], version = "^0.25.0"}
aiohttp-retry = "^2.8.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.0"
pyjwt = "^2.8.0"
structlog = "^23.2.0"
prometheus-client = "^0.17.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
spacy = "^3.7.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[tool.poetry.group.optional.dependencies]
torch = "^2.2.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.0"
spacy-transformers = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]